Fix Google Analytics ID, fix overflowing bug on mobile, fix transition delay on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
 
 body {
   font-family: Inter, sans-serif;
+}
+
+#root {
   overflow-x: hidden;
 }
 
